syntax = "proto3";

package pictophone.log;

import "pictophone/messages.proto";

message ActionRequest {
    oneof method {
        pictophone.messages.JoinGameRequest join_game_request = 1;
        pictophone.messages.StartGameRequest start_game_request = 2;
        pictophone.messages.MakeMoveRequest make_move_request = 3;
    }
}

message ActionResponse {
    oneof method {
        pictophone.messages.JoinGameResponse join_game_response = 1;
        pictophone.messages.StartGameResponse start_game_response = 2;
        pictophone.messages.MakeMoveResponse make_move_response = 3;
    }
}

message QueryRequest {
    oneof method {
        pictophone.messages.GetGameRequest get_game_request = 1;
    }
}

message QueryResponse {
    oneof method {
        pictophone.messages.GetGameResponse get_game_response = 1;
    }
}
