syntax = "proto3";

package pictophone.v1_1;

import "pictophone/v1_0.proto";

service Pictophone {
    rpc CreateGame (pictophone.v1_0.CreateGameRequest) returns (pictophone.v1_0.CreateGameResponse);
    rpc DeleteGame (pictophone.v1_0.DeleteGameRequest) returns (pictophone.v1_0.DeleteGameResponse);

    rpc GetGame(GetGameRequest) returns (stream GetGameResponse);
}

message Action {
    oneof method {
        pictophone.v1_0.CreateGameRequest create_game_request = 1;
        pictophone.v1_0.DeleteGameRequest delete_game_request = 2;
    }
}

message Response {
    oneof method {
        pictophone.v1_0.CreateGameResponse create_game_response = 1;
        pictophone.v1_0.DeleteGameResponse delete_game_response = 2;
    }
}

message QueryRequest {
    oneof method {
        GetGameRequest get_game_request = 1;
    }
}

message QueryResponse {
    oneof method {
        GetGameResponse get_game_response = 1;
    }
}

message GetGameRequest {
    string game_id = 2;
}

message GetGameResponse {
    Game game = 1;
}

message Game {
    string short_code = 1;
}
